[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["payjp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"